apps/hetzner/docs-site/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docs-site
  namespace: docs-site
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: docs-site-hetzner
spec:
  type: ClusterIP
  selector:
    app: docs-site
  ports:
    - name: http
      port: 80
      targetPort: http
